# cardano-connector

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: check.yml  release.yml
src/: connected_wallet.rs  error.rs  lib.rs  wallet.rs
src/cardano/: hash.rs  mod.rs
src/ffi/: cip30.rs  cip30_api.rs  mod.rs
