[package]
name = "cardano-connector"
version = "0.1.4"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2024"
rust-version = "1.85.1"
description = "Platform for implementing Cardano Wallet connector to run in web browsers."
readme = "README.md"
repository = "https://github.com/primetype/cardano-connector"
homepage = "https://primetype.co.uk"
license = "MIT OR Apache-2.0"
keywords = ["Cardano", "WASM", "CIP30", "Wallet"]
categories = [
    "wasm",
    "web-programming",
    "cryptography::cryptocurrencies",
    "api-bindings",
]

[dependencies]
hex = { version = "0.4" }
js-sys = "0.3.77"
pallas-codec = "0.32"
pallas-primitives = "0.32"
pallas-txbuilder = { version = "0.32", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = { version = "1.0" }
thiserror = "2.0"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }


[features]
transaction = ["pallas-txbuilder"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
anyhow = "1.0.97"
